// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Group Page error 1`] = `
<Connect(Layout)
  currentGroup={
    Object {
      "customCalls": false,
      "description": "",
      "groupID": "craig",
      "name": "",
      "photoURL": "",
      "subscribed": false,
      "subtitle": "",
      "totalCalls": 0,
    }
  }
  extraComponent={<Unknown />}
  issueId="100"
  issues={Array []}
>
  <div
    className="page__group"
  >
    <h2
      className="page__title"
    >
      An error occurred during a request for team '
      craig
      ' 😢
    </h2>
  </div>
</Connect(Layout)>
`;

exports[`Test Group Page found 1`] = `
<GroupPage
  cacheGroup={[Function]}
  callState={Object {}}
  clearLocation={[Function]}
  completedIssueIds={Array []}
  currentGroup={
    Object {
      "customCalls": false,
      "description": "",
      "groupID": "craig",
      "name": "",
      "photoURL": "",
      "subscribed": false,
      "subtitle": "",
      "totalCalls": 0,
    }
  }
  currentIssue={Object {}}
  history={Object {}}
  issues={Array []}
  loadingStatus="FOUND"
  location={Object {}}
  locationState={Object {}}
  match={
    Object {
      "isExact": true,
      "params": Object {
        "groupid": "craig",
        "issueid": "100",
      },
      "path": "",
      "url": "",
    }
  }
  onGetIssuesIfNeeded={[Function]}
  onJoinGroup={[Function]}
  onSelectIssue={[Function]}
  setLocation={[Function]}
/>
`;

exports[`Test Group Page loading 1`] = `
<Connect(Layout)
  currentGroup={
    Object {
      "customCalls": false,
      "description": "",
      "groupID": "craig",
      "name": "",
      "photoURL": "",
      "subscribed": false,
      "subtitle": "",
      "totalCalls": 0,
    }
  }
  extraComponent={<Unknown />}
  issueId="100"
  issues={Array []}
>
  <div
    className="page__group"
  >
    <h2
      className="page__title"
    >
      Getting team...
    </h2>
  </div>
</Connect(Layout)>
`;

exports[`Test Group Page not found 1`] = `
<Connect(Layout)
  currentGroup={
    Object {
      "customCalls": false,
      "description": "",
      "groupID": "craig",
      "name": "",
      "photoURL": "",
      "subscribed": false,
      "subtitle": "",
      "totalCalls": 0,
    }
  }
  extraComponent={<Unknown />}
  issueId="100"
  issues={Array []}
>
  <div
    className="page__group"
  >
    <h2
      className="page__title"
    >
      There's no team with an ID of '
      craig
      ' 😢
    </h2>
  </div>
</Connect(Layout)>
`;
